<resources>
    <string name="app_name">Atrapalos</string>
    <string name="et_inicio">INICIO</string>
    <string name="punto1">30 PUNTOS</string>
    <string name="punto2">10 PUNTOS</string>
    <string name="punto3">PERDES </string>
    <string name="punto4">QUITA PUNTOS</string>
    <string name="puntaje">Puntaje:1000</string>
    <string name="bStart">presiona para empezar</string>
    <string name="puntajeMasAltoLabel">PUNTAJE MAS ALTO: 500</string>
    <string name="bRepetir">volver a intentarlo</string>


</resources>
